slack通知を修正

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -66,8 +66,11 @@ jobs:
         if: always()
 
       - name: Slack Notification
-        if: steps.test.outcome != 'success' || steps.checkstyle.outcome != 'success' || steps.spotbugs.outcome != 'success'
+        if: always()
         uses: rtCamp/action-slack-notify@v2
+        with:
+          status: ${{ job.status }}
+          notify_when: 'failure'
         env:
           SLACK_CHANNEL: general
           SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
