--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,7 +1,7 @@
 name: Test Report, Checkstyle, SpotBugs, Notify in Slack and Codecov CI
 
 on:
-  push:
+  push: [ main ]
   pull_request:
 
 jobs:
@@ -19,9 +19,6 @@ jobs:
           distribution: 'temurin'
           cache: 'gradle'
 
-      - name: Build with Gradle
-        run: ./gradlew build
-
       - name: Test with Gradle
         id: test
         run: ./gradlew test
@@ -29,13 +26,9 @@ jobs:
 
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
-        if: always() # always run even if the previous step fails
+        if: always()
         with:
           report_paths: '**/build/test-results/test/TEST-*.xml'
-
-      - name: Checkout
-        uses: actions/checkout@v2
-        if: always()
 
       - name: Run check style
         id: checkstyle
@@ -66,7 +59,7 @@ jobs:
         if: always()
 
       - name: Slack Notification
-        if: failure()
+        if: always()
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_CHANNEL: general
