--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,7 +1,8 @@
 name: Test Report, Checkstyle, SpotBugs, Notify in Slack and Codecov CI
 
 on:
-  push: [ main ]
+  push:
+    branches: [ main ]
   pull_request:
 
 jobs:
