--- a/codecov.yml
+++ b/codecov.yml
@@ -1,5 +1,6 @@
 codecov:
   branch: main # set new Default branch
-comment:
-  require_head: no     # default yes
-  require_base: no     # default yes
+  comment:
+    require_head: no     # default yes
+    require_base: no     # default yes
+    require_changes: false
