add:findAllとfindByIdのMapperテスト

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,6 +20,9 @@ jobs:
           distribution: 'temurin'
           cache: 'gradle'
 
+      - name: Docker run
+        run: docker compose up -d
+
       - name: Test with Gradle
         id: test
         run: ./gradlew test
