テストの追加、存在するアニメに変える

--- a/src/test/resources/datasets/anime.yml
+++ b/src/test/resources/datasets/anime.yml
@@ -1,8 +1,8 @@
 anime:
   - id: 1
-    name: "abc"
-    genre: "def"
+    name: "Kill la Kill"
+    genre: "Action"
 
   - id: 2
-    name: "ghi"
-    genre: "jkl"
+    name: "Fairy Tail"
+    genre: "Adventure"
