統合テストを追加

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2'
     testImplementation group: 'net.javacrumbs.json-unit', name: 'json-unit-assertj', version: '0.0.15'
+    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '2.7.21'
     spotbugsPlugins "com.mebigfatguy.fb-contrib:fb-contrib:7.4.7"
 }
 
